--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,14 @@
 			<artifactId>dozer-core</artifactId>
 			<version>7.0.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.hateoas</groupId>
+			<artifactId>spring-hateoas</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.hateoas</groupId>
+			<artifactId>spring-hateoas</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
