--- a/src/test/java/resources/application.yml
+++ b/src/test/java/resources/application.yml
@@ -1,15 +1,12 @@
+server:
+  port: 8888
 spring:
   application:
     name: course
 
 
   datasource:
-      url: jdbc:mysql://localhost:3306/course?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-      username: root
-      password:
       driver-class-name: com.mysql.cj.jdbc.Driver
-
-
   jpa:
     hibernate:
       ddl-auto: none
