--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,40 @@
+server:
+  port: 8888
+cors:
+  originPatterns: http://localhost:8080,http://localhost:3000,https://www.udemy.com
+
 spring:
   application:
     name: course
-
-
   datasource:
-      url: jdbc:mysql://localhost:3306/course?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-      username: root
-      password:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-
-
+    url: jdbc:mysql://localhost:3306/course?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    #url: jdbc:postgresql://localhost:5432/course
+    username: root
+    password: 123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    #driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: none
     show-sql: false
-  open-in-view: false
+    open-in-view: false
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+
+security:
+  jwt:
+    token:
+      secret-key: 57cr37
+      expire-length: 3600000
+
 logging:
-    level:
-      root:
-      #com.udemyCourse.course: WARN
-spring-doc:
-    paths-to-match: /person
-    swagger-ui:
-      use-root-path: true
+  level:
+    root: INFO
+    #com.udemyCourse.course: WARN
+
+springdoc:
+  paths-to-match: /book/**, /person/**
+  swagger-ui:
+    use-root-path: true
