--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/src/main/**/resources/
+!**/src/test/**/resources/
+
 
 ### STS ###
 .apt_generated
