--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username : lucasgamescarva@gmail.com
-    password: xquc jxlb mrnl qgpt
+    username :
+    password:
     properties:
         mail.smtp.auth: true
         mail.smtp.starttls.enable: true
