--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   application:
     name: course
   datasource:
-    url: jdbc:mysql://localhost:3306/course?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://mysql:3306/course?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     #url: jdbc:postgresql://localhost:5432/course
     username: root
     password: 123
